SDM-2641: Add post-action framework (#130)